update project headings

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -70,14 +70,11 @@
               </svg>
               Back</a
             >
-            <h1>
-              Designing for Designers: Transforming and modernising a neglected
-              design system
-            </h1>
-            <p>
+            <h1>Dixa Design System</h1>
+            <!-- <p>
               If a strong house needs a strong foundation, then a strong app
               needs a strong design system.
-            </p>
+            </p> -->
           </div>
         </header>
         <section class="section gallery">
@@ -88,6 +85,26 @@
               style="view-transition-name: project-dds-preview"
             />
           </figure>
+        </section>
+        <section class="section">
+          <dl class="details">
+            <div class="details-row">
+              <dt>Role</dt>
+              <dd>Senior Product Designer</dd>
+            </div>
+            <div class="details-row">
+              <dt>Platform</dt>
+              <dd>Design System</dd>
+            </div>
+            <div class="details-row">
+              <dt>Team</dt>
+              <dd>1 person</dd>
+            </div>
+            <div class="details-row">
+              <dt>Timeline</dt>
+              <dd>12 months</dd>
+            </div>
+          </dl>
         </section>
         <section class="section">
           <div class="text">
