--- a/projects/dixa-knowledge-management/index.html
+++ b/projects/dixa-knowledge-management/index.html
@@ -72,16 +72,13 @@
               </svg>
               Back
             </a>
-            <h1>
-              Navigating Knowledge: Creating a seamless browsing experience for
-              knowledge
-            </h1>
-            <p>
+            <h1>Dixa Knowledge Management</h1>
+            <!-- <p>
               When the Elevio product and team were acquired by Dixa in 2021 we
               took the task of rebuilding our knowledge management features into
               the new platform as an opportunity to elevate the quality of our
               product offerings.
-            </p>
+            </p> -->
           </div>
         </header>
         <section class="section gallery">
@@ -92,6 +89,26 @@
               style="view-transition-name: project-dkm-preview"
             />
           </figure>
+        </section>
+        <section class="section">
+          <dl class="details">
+            <div class="details-row">
+              <dt>Role</dt>
+              <dd>Product Designer</dd>
+            </div>
+            <div class="details-row">
+              <dt>Platform</dt>
+              <dd>Web</dd>
+            </div>
+            <div class="details-row">
+              <dt>Team</dt>
+              <dd>12 people</dd>
+            </div>
+            <div class="details-row">
+              <dt>Timeline</dt>
+              <dd>3 months</dd>
+            </div>
+          </dl>
         </section>
         <section class="section">
           <div class="text">
