--- a/projects/dixa-sign-in/index.html
+++ b/projects/dixa-sign-in/index.html
@@ -66,23 +66,41 @@
               </svg>
               Back
             </a>
-            <h1>
-              Levelling-Up Logins: Removing barriers to faster customer support
-            </h1>
-            <p>
+            <h1>Dixa Sign In Flow</h1>
+            <!-- <p>
               This in-house project with Dixa was completed in 6 weeks, with me
               acting as the designer and coordinating with the project manager,
               front-end developer and back-end developer. The goal was to
               increase customer satisfaction with the sign in process by
               removing barriers to a smooth user flow, and expanding the
               offering of authentication methods to help land more clients.
-            </p>
+            </p> -->
           </div>
         </header>
         <section class="section gallery">
           <figure class="figure">
             <img class="figure-image" src="design-review.png" />
           </figure>
+        </section>
+        <section class="section">
+          <dl class="details">
+            <div class="details-row">
+              <dt>Role</dt>
+              <dd>Product Designer</dd>
+            </div>
+            <div class="details-row">
+              <dt>Platform</dt>
+              <dd>Web</dd>
+            </div>
+            <div class="details-row">
+              <dt>Team</dt>
+              <dd>4 people</dd>
+            </div>
+            <div class="details-row">
+              <dt>Timeline</dt>
+              <dd>6 weeks</dd>
+            </div>
+          </dl>
         </section>
         <section class="section">
           <div class="text">
