--- a/projects/rotageek-mobile-app/index.html
+++ b/projects/rotageek-mobile-app/index.html
@@ -70,14 +70,7 @@
               </svg>
               Back
             </a>
-            <h1>
-              Empowering Employees: Redesigning a mobile app for part-time
-              workers
-            </h1>
-            <p>
-              A world-class scheduling and workforce management solution, now on
-              your phone.
-            </p>
+            <h1>RotaGeek Employee Mobile App</h1>
           </div>
         </header>
         <section class="section gallery">
@@ -88,6 +81,26 @@
               style="view-transition-name: project-rma-preview"
             />
           </figure>
+        </section>
+        <section class="section">
+          <dl class="details">
+            <div class="details-row">
+              <dt>Role</dt>
+              <dd>Product Designer</dd>
+            </div>
+            <div class="details-row">
+              <dt>Platform</dt>
+              <dd>iOS/Android</dd>
+            </div>
+            <div class="details-row">
+              <dt>Team</dt>
+              <dd>5 people</dd>
+            </div>
+            <div class="details-row">
+              <dt>Timeline</dt>
+              <dd>6 months</dd>
+            </div>
+          </dl>
         </section>
         <section class="section">
           <div class="text">
