shorten "Senior" to "Sr."

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -90,7 +90,7 @@
           <dl class="details">
             <div class="details-row">
               <dt>Role</dt>
-              <dd>Senior Product Designer</dd>
+              <dd>Sr. Product Designer</dd>
             </div>
             <div class="details-row">
               <dt>Platform</dt>
