update RotaGeek case study introduction

--- a/projects/rotageek-mobile-app/index.html
+++ b/projects/rotageek-mobile-app/index.html
@@ -100,6 +100,43 @@
         </section>
         <section class="section">
           <div class="text">
+            <p><strong>Introduction</strong></p>
+            <p>
+              RotaGeek is a workforce management software to improve
+              productivity, profitability, and employee happiness. It's web
+              platform is loved by store managers for it's powerful and
+              easy-to-use scheduling tools. However, the experience for the much
+              larger user base of store employees was not delivering the same
+              quality experience.
+            </p>
+            <p>
+              So we set out to improve the process for common daily tasks, such
+              as clocking in/out of shifts, requesting leave, and submitting
+              timesheets. After speaking with some of our top clients we came to
+              the conclusion that a bespoke mobile app tool would give us the
+              clearest path to achieving the best experience for these
+              employees.
+            </p>
+            <hr />
+            <p><strong>Challenges</strong></p>
+            <ul>
+              <li>
+                How could we adapt current features for new mobile form factor?
+              </li>
+              <li>
+                How could we easily support a wide range of platforms and
+                devices?
+              </li>
+              <li>
+                How could we leverage new technology to improve existing
+                workflows?
+              </li>
+            </ul>
+            <hr />
+          </div>
+        </section>
+        <section class="section">
+          <div class="text">
             <h2>The Challenge</h2>
             <p>
               The Rotageek team wanted to create a native iOS and Android app so
