update RotaGeek case study

--- a/projects/rotageek-mobile-app/index.html
+++ b/projects/rotageek-mobile-app/index.html
@@ -137,17 +137,19 @@
         </section>
         <section class="section">
           <div class="text">
-            <h2>The Challenge</h2>
+            <h2>Designing for small screen</h2>
             <p>
-              The Rotageek team wanted to create a native iOS and Android app so
-              that users could securely access their schedules on their own
-              devices, rather than a shared computer or tablet at their
-              workplace.
+              To explore the solution space I conducted market and user research
+              to explore similar product offerings on the market. Combining the
+              strongest design aspects of industry leading calendar based apps
+              and task management apps to form the foundation of our design
+              language.
             </p>
             <p>
-              Users would also need to clock in and out of shifts, request leave
-              and manage their availability from anywhere at anytime through an
-              interface that was optimised for mobile devices.
+              Working as a part of the product and design team, I created
+              wireframes and high-fidelity designs in Figma which were reviewed
+              in collaboration with the development team to validate technology
+              choices and plan out sprint work.
             </p>
           </div>
         </section>
@@ -161,18 +163,20 @@
         </section>
         <section class="section">
           <div class="text">
-            <h2>The Solution</h2>
+            <h2>Leveraging new technology</h2>
             <p>
-              Working as a part of the product and design team, I helped to
-              create wireframes and high-fidelity designs in Figma which were
-              reviewed in collaboration with the development team to validate
-              technology choices and plan out sprint work.
+              In conjunction with engineers we explored new technologies that
+              would help us maximise our output for mobile development, without
+              slowing down our regular web development. We decided to build with
+              React Native, which allowed us to leverage our existing skills to
+              support any iOS and Android device.
             </p>
             <p>
               After finalising the designs for the initial screens, I created a
-              semi-functional prototype in React Native that the developers
-              could build upon, to ensure that the implemented user interface
-              perfectly matched the design concepts.
+              semi-functional prototype in React Native (a first time thing for
+              me) that the developers could build on, to ensure that the
+              implemented user interface matched the design concepts and best
+              adapted to the actual devices form factor.
             </p>
           </div>
         </section>
