update RotaGeek case study

--- a/projects/rotageek-mobile-app/index.html
+++ b/projects/rotageek-mobile-app/index.html
@@ -190,6 +190,33 @@
         </section>
         <section class="section">
           <div class="text">
+            <h2>In store trial runs</h2>
+            <p>
+              With the help of our amazing Customer Success team we approached
+              five of our major customers with whom we had a great relationship.
+              They agreed to run a limited in-store trials of the new mobile app
+              so we could gather data and feedback from practical day-to-day
+              usage.
+            </p>
+            <p>
+              The trials were a major hit with most of the companies and
+              employees. But we did discover that some of our clients were
+              averse to the idea of allowing employees access their phones while
+              on store premises. This lead us to develop a secondary product
+              offering of an in-store tablet-based kiosk app.
+            </p>
+          </div>
+        </section>
+        <section class="section gallery">
+          <figure class="figure">
+            <img class="figure-image" src="tablet.png" />
+            <figcaption class="figure-caption">
+              RotaGeek Employee Kiosk tablet app
+            </figcaption>
+          </figure>
+        </section>
+        <section class="section">
+          <div class="text">
             <h2>The Results</h2>
             <p>
               The iOS and Android apps were released about 6 months after work
