combine project details into one section

--- a/projects/rotageek-mobile-app/index.html
+++ b/projects/rotageek-mobile-app/index.html
@@ -83,24 +83,23 @@
           </figure>
         </section>
         <section class="section">
-          <dl class="details">
-            <div class="details-row">
-              <dt>Role</dt>
-              <dd>Product Designer</dd>
-            </div>
-            <div class="details-row">
-              <dt>Platform</dt>
-              <dd>iOS/Android</dd>
-            </div>
-            <div class="details-row">
-              <dt>Timeline</dt>
-              <dd>6 months</dd>
-            </div>
-          </dl>
-        </section>
-        <section class="section">
           <div class="text">
-            <p><strong>Introduction</strong></p>
+            <dl class="details">
+              <div class="details-row">
+                <dt>Role</dt>
+                <dd>Product Designer</dd>
+              </div>
+              <div class="details-row">
+                <dt>Platform</dt>
+                <dd>iOS/Android</dd>
+              </div>
+              <div class="details-row">
+                <dt>Timeline</dt>
+                <dd>6 months</dd>
+              </div>
+            </dl>
+            <hr />
+            <p><strong>About</strong></p>
             <p>
               RotaGeek is a workforce management software to improve
               productivity, profitability, and employee happiness. It's web
