update RotaGeek mobile app case study

--- a/projects/rotageek-mobile-app/index.html
+++ b/projects/rotageek-mobile-app/index.html
@@ -164,7 +164,7 @@
           <div class="text">
             <h2>Leveraging new technology</h2>
             <p>
-              In conjunction with engineers we explored new technologies that
+              In conjunction with engineers I explored new technologies that
               would help us maximise our output for mobile development, without
               slowing down our regular web development. We decided to build with
               React Native, which allowed us to leverage our existing skills to
@@ -191,7 +191,7 @@
           <div class="text">
             <h2>In store trial runs</h2>
             <p>
-              With the help of our amazing Customer Success team we approached
+              With the help of our amazing Customer Success team I approached
               five of our major customers with whom we had a great relationship.
               They agreed to run a limited in-store trials of the new mobile app
               so we could gather data and feedback from practical day-to-day
@@ -216,14 +216,20 @@
         </section>
         <section class="section">
           <div class="text">
-            <h2>The Results</h2>
+            <h2>Measuring the impact</h2>
             <p>
-              The iOS and Android apps were released about 6 months after work
-              began with basic functionality, and we would continue to improve
-              them and add new features over time. Though there were some
-              initial struggles getting them fully supported on older devices
-              they were generally well received and support was patched were
-              possible.
+              The employee mobile app was rolled out to all clients and is now a
+              key part of the RotaGeek offering. Having received a rating of
+              <strong>4.8 stars</strong> on the Apple App Store, and
+              <strong>50k+ downloads</strong> on the Google Play Store as of
+              this writing.
+            </p>
+            <p>
+              The tablet kiosk app was provided to select clients at an
+              additional cost resulting in an average yearly revenue increased
+              of <strong>1.2x per user</strong>. It was also instrumental in
+              landing several new clients in the retail sector in the following
+              years.
             </p>
           </div>
         </section>
