update case studies

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -71,10 +71,6 @@
               Back</a
             >
             <h1>Dixa Design System</h1>
-            <!-- <p>
-              If a strong house needs a strong foundation, then a strong app
-              needs a strong design system.
-            </p> -->
           </div>
         </header>
         <section class="section gallery">
@@ -87,20 +83,22 @@
           </figure>
         </section>
         <section class="section">
-          <dl class="details">
-            <div class="details-row">
-              <dt>Role</dt>
-              <dd>Sr. Product Designer</dd>
-            </div>
-            <div class="details-row">
-              <dt>Platform</dt>
-              <dd>Design System</dd>
-            </div>
-            <div class="details-row">
-              <dt>Timeline</dt>
-              <dd>12 months</dd>
-            </div>
-          </dl>
+          <div class="text">
+            <dl class="details">
+              <div class="details-row">
+                <dt>Role</dt>
+                <dd>Sr. Product Designer</dd>
+              </div>
+              <div class="details-row">
+                <dt>Platform</dt>
+                <dd>Design System</dd>
+              </div>
+              <div class="details-row">
+                <dt>Timeline</dt>
+                <dd>12 months</dd>
+              </div>
+            </dl>
+          </div>
         </section>
         <section class="section">
           <div class="text">
