--- a/projects/dixa-sign-in/index.html
+++ b/projects/dixa-sign-in/index.html
@@ -83,20 +83,22 @@
           </figure>
         </section>
         <section class="section">
-          <dl class="details">
-            <div class="details-row">
-              <dt>Role</dt>
-              <dd>Product Designer</dd>
-            </div>
-            <div class="details-row">
-              <dt>Platform</dt>
-              <dd>Web</dd>
-            </div>
-            <div class="details-row">
-              <dt>Timeline</dt>
-              <dd>6 weeks</dd>
-            </div>
-          </dl>
+          <div class="text">
+            <dl class="details">
+              <div class="details-row">
+                <dt>Role</dt>
+                <dd>Product Designer</dd>
+              </div>
+              <div class="details-row">
+                <dt>Platform</dt>
+                <dd>Web</dd>
+              </div>
+              <div class="details-row">
+                <dt>Timeline</dt>
+                <dd>6 weeks</dd>
+              </div>
+            </dl>
+          </div>
         </section>
         <section class="section">
           <div class="text">
