--- a/projects/rotageek-mobile-app/index.html
+++ b/projects/rotageek-mobile-app/index.html
@@ -136,7 +136,7 @@
         </section>
         <section class="section">
           <div class="text">
-            <h2>Designing for small screen</h2>
+            <h2>Big thoughts about small things</h2>
             <p>
               To explore the solution space I conducted market and user research
               to explore similar product offerings on the market. Combining the
