update design system intro

--- a/projects/dixa-design-system/index.html
+++ b/projects/dixa-design-system/index.html
@@ -98,6 +98,36 @@
                 <dd>12 months</dd>
               </div>
             </dl>
+            <hr />
+            <p><strong>About</strong></p>
+            <p>
+              The Dixa design system, internally named <em>"Habla"</em> provided
+              the foundation for the UI of Dixa's customer support platform
+              across both web and mobile. However, over the years since it was
+              first conceived that foundation has severely eroded. Components
+              were out of date, and lacked essential properties and
+              customization options.
+            </p>
+            <p>
+              This led to inconsistencies and inefficiencies in the design
+              process, making it difficult for designers to rely on the system
+              for their work. I volunteered to become the dedicated maintainer
+              and enthusiastically took on the challenge of bringing the system
+              back to life.
+            </p>
+            <hr />
+            <p><strong>Goals</strong></p>
+            <ul>
+              <li>
+                Achieving a 1-to-1 match between Figma and live components
+              </li>
+              <li>Ensuring components are easy to find, understand and use</li>
+              <li>
+                Future-proofing components by making them more powerful and
+                flexible
+              </li>
+            </ul>
+            <hr />
           </div>
         </section>
         <section class="section">
