remove top-left header section

--- a/thoughts/looping-figma-animation/index.html
+++ b/thoughts/looping-figma-animation/index.html
@@ -40,22 +40,9 @@
     <div class="layout">
       <!-- Nav -->
       <nav class="nav" style="view-transition-name: nav">
-        <a class="flex gap-16 center" href="/">
-          <img
-            src="/assets/memoji/smile.png"
-            class="memoji small"
-            alt="Memoji of Benedict Forrest"
-          />
-          <div class="flex column">
-            <strong>Benedict Forrest</strong>
-            <small>Product Designer</small>
-          </div>
-        </a>
-        <div class="flex gap-8">
-          <a class="button" href="/">💼 Work</a>
-          <a class="button" href="/thoughts/">🧠 Thoughts</a>
-          <a class="button" href="/about/">🧑‍💻 About</a>
-        </div>
+        <a class="button" href="/">💼 Work</a>
+        <a class="button" href="/thoughts/">🧠 Thoughts</a>
+        <a class="button" href="/about/">🧑‍💻 About</a>
       </nav>
 
       <!-- Article -->
@@ -118,14 +105,24 @@
         </section>
         <section class="section">
           <div class="text">
-            <p>
-              Some bonus thoughts in my thoughts:
-              <ul>
-                <li>I have 4 steps in my animation because having only the start and end frames caused the blue part to rock back and forth on the top half instead of making a full loop.</li>
-                <li>It would be better to have a delay of 0ms, but as of writing this Figma does not support having a value less than 1ms.</li>
-                <li>If you want to have different possible animation options, like reversing the rotation or changing the speed, you can add more variations with a new prop like "Reverse" and create different interactions for those.</li>
-              </ul>
-            </p>
+            <p>Some bonus thoughts in my thoughts:</p>
+            <ul>
+              <li>
+                I have 4 steps in my animation because having only the start and
+                end frames caused the blue part to rock back and forth on the
+                top half instead of making a full loop.
+              </li>
+              <li>
+                It would be better to have a delay of 0ms, but as of writing
+                this Figma does not support having a value less than 1ms.
+              </li>
+              <li>
+                If you want to have different possible animation options, like
+                reversing the rotation or changing the speed, you can add more
+                variations with a new prop like "Reverse" and create different
+                interactions for those.
+              </li>
+            </ul>
           </div>
         </section>
       </article>
